--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
     rev: '5.10.1'
     hooks:
       - id: isort
+        args: ["--line-length=88", "--multi-line=3", "--lines-after-imports=2", "--trailing-comma"]
 # autoflake
 -   repo: https://github.com/myint/autoflake
     rev: v1.4
@@ -25,11 +26,11 @@ repos:
       - id: autoflake
         args: [ '--in-place', '--remove-all-unused-imports', '--ignore-init-module-imports']
 # flake8
--   repo: https://gitlab.com/pycqa/flake8
+-   repo: https://github.com/pycqa/flake8
     rev: '3.9.2'
     hooks:
       - id: flake8
-        args: [--max-line-length=100]
+        args: ["--max-line-length=100", "--extend-ignore=E203"]
 # mypy
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.961'
