--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,12 @@
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["sudoku_gaming"]
 
 [project]
 name = "sudoku_gaming"
-version = "0.0.1"
+version = "1.0.0"
 description = "A sudoku gameplay client."
 readme = "README.md"
 authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
@@ -17,10 +19,18 @@ classifiers = [
 ]
 keywords = ["sudoku", "solver", "gameplay"]
 dependencies = []
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 
 [project.optional-dependencies]
-dev = ["pre-commit"]
+dev = [
+    "pre-commit",
+    "pytest",
+]
+img = [
+    "plotly",
+    "kaleido",
+]
+
 
 [project.urls]
 Homepage = "https://github.com/itsluketwist/sudoku-gaming"
